# sdk

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  Makefile  Makefile.deploy  README.md  changelog.md  codestyle.md  contributing.md  docker-compose.dev.yml  docker-compose.yml  documentation_management.rulebook.md  iron.db-journal  iron_runtime.rulebook.md  publish.sh  readme.md  test_organization.rulebook.md
module/iron_agent/: README.md  apollo_tools.py  lead_generator_agent.py  pyproject.toml
module/iron_agents/lead_generator_agent/: pyproject.toml  readme.md  spec.md
module/iron_api/: Cargo.toml  readme.md  spec.md
module/iron_api/src/: jwt_auth.rs  lib.rs  rbac.rs  token_auth.rs
module/iron_api/tests/: api_test.rs  auth.rs  auth_endpoints.rs  health.rs  integration_tests.rs  keys.rs  rbac.rs  readme.md  tokens.rs
module/iron_cli/: Cargo.toml  build.rs  readme.md  spec.md
module/iron_cli/benches/: formatting_benchmarks.rs
module/iron_cli/commands/: auth.yaml  common.yaml  health.yaml  limits.yaml  readme.md  tokens.yaml  traces.yaml  usage.yaml
module/iron_cli/docs/: command_reference.md  formatting_quick_reference.md  readme.md  tree_fmt_ci_integration.md  troubleshooting_guide.md  user_guide.md
module/iron_cli/scripts/: attempt_rollback.sh  measure_migration_state.sh
module/iron_cli/src/: config.rs  lib.rs  readme.md
module/iron_cli/tests/: adapters.rs  api_parity.rs  config_test.rs  formatting.rs  handlers.rs  impossibility_tests.rs  integration_test.rs  lint.rs  migration.rs  parameters_test.rs  readme.md  routing.rs
module/iron_cli_py/: pyproject.toml  readme.md  spec.md
module/iron_cli_py/src/: readme.md
module/iron_cli_py/tests/: __init__.py  readme.md
module/iron_config_loader/: Cargo.toml  readme.md
module/iron_config_loader/src/: error.rs  lib.rs  loader.rs
module/iron_config_loader/tests/: env_layer_test.rs  file_layer_test.rs  precedence_test.rs
module/iron_control_api/: Cargo.toml  Dockerfile  build.rs  readme.md  spec.md
module/iron_control_api/examples/: gen_ic_token.rs  readme.md
module/iron_control_api/migrations/: 003_create_users_table.sql  007_create_blacklist_table.sql  011_create_analytics_events.sql  020_add_account_lockout_fields.sql
module/iron_control_api/src/: error.rs  ic_token.rs  ip_token.rs  jwt_auth.rs  lib.rs  rate_limiter.rs  rbac.rs  readme.md  token_auth.rs  user_auth.rs
module/iron_control_api/tests/: agent_provider_key_tests.rs  agents_integration_tests.rs  analytics_integration_tests.rs  api_test.rs  assign_providers_errors.rs  auth.rs  auth_endpoints.rs  auth_rate_limiting.rs  authorization_checks.rs  budget_approval_approver_tracking_test.rs  budget_boundary_values.rs  budget_concurrency.rs  budget_concurrency_diagnosis.rs  budget_corner_cases.rs  budget_corner_cases_refresh.rs  budget_database_state.rs  budget_invariants.rs  budget_lease_lifecycle.rs  budget_refresh_jwt_auth_test.rs  budget_request_max_limit_test.rs  budget_routes.rs  budget_security.rs  budget_security_ic_token.rs  budget_security_jwt.rs  budget_security_unicode.rs  budget_security_validation.rs  create_agent_errors.rs  critical_corner_cases_manual_test.rs  get_agent_details_errors.rs  get_agent_providers_errors.rs  get_agent_status_errors.rs  handshake_budget_request_validation_test.rs  handshake_ip_token_decryption_test.rs  handshake_malformed_agent_id_test.rs  health.rs  integration_tests.rs  keys.rs  limits.rs  list_agents_errors.rs  login_connect_info_test.rs  (+21 more)
module/iron_control_schema/: Cargo.toml  license  readme.md  spec.md
module/iron_control_schema/src/: lib.rs  readme.md
module/iron_control_schema/tests/: smoke_test.rs
module/iron_cost/: Cargo.toml  readme.md  spec.md
module/iron_cost/asset/: pricing.json
module/iron_cost/src/: budget.rs  budget_client.rs  converter.rs  error.rs  lib.rs  pricing.rs  readme.md
module/iron_cost/tests/: budget_test.rs  bug_deadlock_dashmap_fix.rs  converter_test.rs  pricing_test.rs  readme.md  readme_example_test.rs
module/iron_lang/: Cargo.toml  readme.md  spec.md
module/iron_lang/docs/: system_context_diagram.md
module/iron_lang/src/: auth.rs  connectors.rs  lib.rs  protocol.rs  router.rs  runtime.rs
module/iron_lang/tests/: message_serialization.rs  readme.md
module/iron_reliability/: Cargo.toml  readme.md  spec.md
module/iron_reliability/src/: lib.rs
module/iron_reliability/tests/: readme.md
module/iron_runtime/: Cargo.toml  pyproject.toml  readme.md  spec.md
module/iron_runtime/python/: __init__.py  iron_cage.pyi  iron_runtime.pyi  requirements.txt
module/iron_runtime/src/: lib.rs
module/iron_runtime/tests/: llm_router_integration_test.rs  llm_router_test.rs  llm_router_translator_request_test.rs  llm_router_translator_response_test.rs  readme.md  runtime_test.rs
module/iron_runtime_analytics/: Cargo.toml  readme.md  spec.md
module/iron_runtime_analytics/src/: event.rs  event_storage.rs  helpers.rs  lib.rs  readme.md  recording.rs  stats.rs  sync.rs
module/iron_runtime_analytics/tests/: concurrency_test.rs  helpers_test.rs  readme.md  recording_test.rs  sync_test.rs
module/iron_runtime_state/: Cargo.toml  readme.md
module/iron_runtime_state/tests/: state_test.rs
module/iron_safety/: Cargo.toml  readme.md  spec.md
module/iron_safety/src/: lib.rs
module/iron_secrets/: Cargo.toml  readme.md  spec.md
module/iron_secrets/src/: access_control.rs  audit.rs  crypto.rs  error.rs  lib.rs  readme.md  secrets_manager.rs  storage.rs
module/iron_secrets/tests/: crypto_test.rs  encryption_tests.rs  readme.md  smoke_test.rs
module/iron_test_db/: Cargo.toml  readme.md
module/iron_test_db/benches/: readme.md  test_db_creation.rs
module/iron_testing/: pyproject.toml  readme.md  spec.md
module/iron_token_manager/: .env.test.example  Cargo.toml  Makefile  config.dev.toml  config.prod.toml.example  config.test.toml  readme.md  spec.md
module/iron_types/: Cargo.toml  readme.md  spec.md
pilot/: spec.md  (+6 more)
python/iron_examples/: pyproject.toml  readme.md  spec.md
(+786 files in other folders)
