[project]
name = "iron-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.3.7",
    "langchain-community==0.3.7",
    "langchain-core==0.3.19",
    "langchain-openai==0.2.9",
    "pydantic>=2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
