[package]
name = "iron_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "iron_api_server"
path = "src/bin/iron_api_server.rs"

[features]
default = ["enabled"]
enabled = [
  "dep:iron_types",
  "dep:iron_state",
  "dep:iron_token_manager",
  "dep:tokio",
  "dep:axum",
  "dep:tower",
  "dep:tower-http",
  "dep:serde",
  "dep:serde_json",
  "dep:tracing",
  "dep:anyhow",
  "dep:jsonwebtoken",
  "dep:chrono",
  "dep:sqlx",
  "dep:async-trait",
  "dep:bcrypt",
]
full = ["enabled"]

[dependencies]
# Iron Cage crates
iron_types = { workspace = true, features = ["full"], optional = true }
iron_state = { workspace = true, features = ["full"], optional = true }
iron_token_manager = { workspace = true, features = ["full"], optional = true }

# Web framework
axum = { workspace = true, features = ["ws"], optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["cors", "trace"], optional = true }

# Async runtime
tokio = { workspace = true, features = ["full"], optional = true }

# Serialization
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

# Error handling
anyhow = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

# Tracing
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true }

# JWT Authentication (Phase 4 Day 26)
jsonwebtoken = { version = "9.3", optional = true }

# Time utilities (Phase 4 Day 28)
chrono = { workspace = true, optional = true }

# Database (Phase 4 Day 29)
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"], optional = true }

# Async trait support
async-trait = { version = "0.1", optional = true }

# Password hashing for authentication
bcrypt = { version = "0.16", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
hyper = { version = "1.5", features = ["full"] }
http-body-util = "0.1"
