[package]
name = "iron_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "iron-token"
path = "src/bin/iron_token_unilang.rs"

[[bin]]
name = "iron"
path = "src/bin/iron_control_unilang.rs"

[features]
default = ["full"]
enabled = [
    "dep:tokio",
    "dep:serde",
    "dep:serde_json",
    "dep:serde_yaml",
    "dep:reqwest",
    "dep:unilang",
    "dep:async-trait",
    "dep:dirs",
    "dep:keyring",
]
full = ["enabled"]
# test-adapter: Enables InMemoryAdapter for integration tests
# (compile_error! prevents production use)
test-adapter = []

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
unilang = { version = "0.44.0", features = ["default"], optional = true }
async-trait = { version = "0.1", optional = true }
dirs = { version = "5.0", optional = true }
keyring = { version = "2.3", optional = true }
regex = { version = "1.10" }

[build-dependencies]
serde_yaml = "0.9"

[dev-dependencies]
# Test dependencies automatically enable test-adapter feature
iron_cli = { path = ".", features = ["test-adapter"] }
