[package]
name = "iron_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line interface for Iron Cage agent management"
repository = "https://github.com/.../iron_runtime"
readme = "readme.md"
keywords = ["cli", "agent", "management", "command-line"]
categories = ["command-line-utilities"]

[features]
default = ["full"]
enabled = [
    "dep:tokio",
    "dep:serde",
    "dep:serde_json",
    "dep:serde_yaml",
    "dep:reqwest",
    "dep:unilang",
    "dep:async-trait",
    "dep:dirs",
    "dep:keyring",
]
full = ["enabled"]
# test-adapter: Enables InMemoryAdapter for integration tests
# (compile_error! prevents production use)
test-adapter = []

[dependencies]
# Core dependencies
iron_config = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { workspace = true, optional = true }
unilang = { version = "0.44.0", features = ["default"], optional = true }
async-trait = { version = "0.1", optional = true }
dirs = { version = "5.0", optional = true }
keyring = { version = "2.3", optional = true }
regex = { version = "1.10" }
base64 = { version = "0.22" }
tree_fmt = { version = "0.7.0", features = ["table_plain", "expanded_postgres", "format_json", "format_yaml"] }

[build-dependencies]
serde_yaml.workspace = true

[dev-dependencies]
# Test dependencies automatically enable test-adapter feature
iron_cli = { path = ".", features = ["test-adapter"] }

# Test infrastructure dependencies (real implementations, no mocking)
axum = { version = "0.7" }
tower = { version = "0.4" }
iron_test_db = { path = "../iron_test_db" }
iron_control_api = { path = "../iron_control_api", features = ["enabled"] }
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "iron-token"
path = "src/bin/iron_token_unilang.rs"

[[bin]]
name = "iron"
path = "src/bin/iron_control_unilang.rs"

[[bench]]
name = "formatting_benchmarks"
harness = false
