[project]
name = "iron-cli-py"
version = "0.1.0"
description = "Python CLI for Iron Cage token management and agent control"
authors = [
  {name = "Iron Cage Team"}
]
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "click>=8.0.0",
  "rich>=13.0.0",  # Terminal formatting
  "httpx>=0.24.0",  # For API calls to Control Panel
]

[project.scripts]
iron-py = "iron_cli_py.cli:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
