[package]
name = "iron_config_loader"
version= "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Unified configuration management for Iron Runtime"
repository = "https://github.com/.../iron_runtime"
readme = "readme.md"
keywords = ["config", "configuration", "environment", "toml"]
categories = ["config"]

[features]
default = ["enabled"]
enabled = [
  "dep:workspace_tools",
  "dep:serde",
  "dep:serde_json",
  "dep:toml",
  "dep:thiserror",
  "dep:dirs",
]
full = ["enabled"]

[dependencies]
# Workspace management
workspace_tools = { workspace = true, optional = true }

# Serialization
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true, optional = true }

# System directories
dirs = { version = "5.0", optional = true }

[dev-dependencies]
tempfile = "3.8"
