[package]
name = "iron_control_api"
version= "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "HTTP API for Iron Cage control plane"
repository = "https://github.com/.../iron_runtime"
readme = "readme.md"
keywords = ["api", "rest", "control-plane", "agent-management"]
categories = ["web-programming::http-server"]

[features]
default = ["enabled"]
enabled = [
  "dep:iron_types",
  "dep:iron_runtime_state",
  "dep:iron_token_manager",
  "dep:iron_secrets",
  "dep:tokio",
  "dep:axum-extra",
  "dep:axum",
  "dep:tower",
  "dep:tower-http",
  "dep:serde",
  "dep:serde_json",
  "dep:tracing",
  "dep:anyhow",
  "dep:jsonwebtoken",
  "dep:chrono",
  "dep:sqlx",
  "dep:async-trait",
  "dep:bcrypt",
  "dep:reqwest",
  "dep:aes-gcm",
  "dep:rand",
  "dep:zeroize",
  "dep:base64",
  "dep:uuid",
  "dep:hex",
  "dep:sha2",
]
full = ["enabled"]

[dependencies]
# Iron Cage crates
iron_types = { workspace = true, features = ["full"], optional = true }
iron_runtime_state = { workspace = true, features = ["enabled", "sqlite"], optional = true }
iron_token_manager = { workspace = true, optional = true }
iron_secrets = { workspace = true, optional = true }

# Workspace management
workspace_tools = { workspace = true }

# Web framework
axum = { workspace = true, features = ["ws"], optional = true }
axum-extra = { workspace = true, optional = true, features = ["typed-header"] }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, features = ["cors", "trace"], optional = true }

# Async runtime
tokio = { workspace = true, features = ["full"], optional = true }

# Serialization
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

# Error handling
anyhow = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }

# Tracing
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true }

# JWT Authentication (Phase 4 Day 26)
jsonwebtoken = { workspace = true, optional = true }

# Time utilities (Phase 4 Day 28)
chrono = { workspace = true, optional = true }

# Database (Phase 4 Day 29)
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"], optional = true }

# Async trait support
async-trait = { workspace = true, optional = true }

# Password hashing for authentication
bcrypt = { workspace = true, optional = true }

# HTTP client for external API calls (balance fetching)
reqwest = { workspace = true, optional = true }

# Environment variable loading from .env files
dotenvy = { workspace = true }

# Cryptography for IP Token encryption (Protocol 005)
aes-gcm = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }
hex = { version = "0.4", optional = true }

# SHA-256 hashing for IC token storage (only hash is stored, not token)
sha2 = { workspace = true, optional = true }

[build-dependencies]
vergen = { version = "8.0", features = ["build", "git", "gitcl"] }

[dev-dependencies]
iron_token_manager = { path = "../iron_token_manager" }
iron_test_db = { path = "../iron_test_db", features = ["enabled"] }
tokio = { workspace = true, features = ["full"] }
hyper = { workspace = true }
http-body-util = { workspace = true }
sha2 = { workspace = true }
serial_test = "3.2.0"
tempfile = "3.8"
reqwest = { workspace = true }
walkdir = "2.4"

[[bin]]
name = "iron_control_api_server"
path = "src/bin/iron_control_api_server.rs"
