[package]
name = "iron_control_schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "PostgreSQL schema for Iron Cage Control Panel (production mode)"

[features]
enabled = []
full = ["enabled"]

[lib]
# Spec-only module - no implementation yet

[dependencies]
# Will be added when implementation starts:
# sqlx.workspace = true
# serde.workspace = true
# iron_types.workspace = true

[lints]
workspace = true
