[package]
name = "iron_cost"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Budget tracking and cost enforcement for Iron Cage AI agents"
repository = "https://github.com/.../iron_cage"
readme = "readme.md"
keywords = ["ai", "agent", "budget", "cost", "llm"]
categories = ["development-tools", "algorithms"]

[features]
default = ["enabled"]
enabled = ["dep:iron_types", "dep:tokio", "dep:dashmap", "dep:serde", "dep:tracing"]
full = ["enabled"]

[dependencies]
iron_types = { workspace = true, features = ["full"], optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
dashmap = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
tracing = { workspace = true, optional = true }
