[project]
name = "iron-runtime"
version = "0.2.0"
description = "Iron Runtime - LLM proxy with safety controls"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=4.0.0",
]
examples = [
  "langchain>=0.3.0",  # AI agent framework for examples
  "langchain-community>=0.3.0",  # Community extensions
  "langchain-openai>=0.2.0",  # OpenAI integration
  "openai>=1.50.0",  # OpenAI SDK
  "typing-extensions>=4.12.0",  # Type hints backport
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "iron_cage"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
