[package]
name = "iron_runtime_analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["enabled"]
enabled = []
full = ["enabled"]

[dependencies]
serde = { workspace = true, features = ["derive","rc"] }
uuid = { workspace = true, features = ["v4","serde"] }
iron_cost = { workspace = true}
[dev-dependencies]
