[package]
name = "iron_runtime_analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = [ "enabled" ]
enabled = [
  "dep:serde",
  "dep:uuid",
  "dep:iron_cost",
  "dep:crossbeam",
  "dep:dashmap",
]
full = [ "enabled" ]

[dependencies]
serde = { workspace = true, features = [ "derive", "rc" ], optional = true }
uuid = { workspace = true, features = [ "v4", "serde" ], optional = true }
iron_cost = { workspace = true, optional = true }
crossbeam = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }

[dev-dependencies]
iron_cost = { workspace = true }
