[package]
name = "iron_runtime_state"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["enabled"]
enabled = [
  "dep:iron_types",
  "dep:dashmap",
  "dep:serde",
  "dep:tokio",
  "dep:tracing",
]
full = ["enabled", "sqlite", "redis"]
sqlite = ["dep:sqlx"]
redis = ["dep:redis"]

[dependencies]
iron_types = { workspace = true, features = ["full"], optional = true }

# In-memory state
dashmap = { workspace = true, optional = true }

# Persistence (version 0.7 to match iron_safety)
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls"], optional = true }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"], optional = true }

# Serialization
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true, features = ["full"], optional = true }

# Logging
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
