[package]
name = "iron_safety"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["enabled"]
enabled = ["dep:iron_types", "dep:regex", "dep:tracing", "dep:serde"]
full = ["enabled", "audit"]
audit = ["dep:sqlx"]

[dependencies]
iron_types = { workspace = true, features = ["full"], optional = true }
regex = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls"], optional = true }
