[package]
name = "iron_test_db"
version = "0.1.0"
edition = "2021"
authors = ["Iron Runtime Team"]
description = "Test database infrastructure for Iron Runtime crates"
license = "MIT OR Apache-2.0"

[dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tempfile = "3.8"
tokio = { version = "1.35", features = ["rt", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "test_db_creation"
harness = false
