[package]
name = "iron_test_db"
version.workspace = true
edition.workspace = true
authors = ["Iron Runtime Team"]
description = "Test database infrastructure for Iron Runtime crates"
license.workspace = true

[features]
enabled = []
full = ["enabled"]

[dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
tempfile = "3.8"
tokio = { version = "1.35", features = ["rt", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
workspace_tools = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "test_db_creation"
harness = false
