[project]
name = "iron-testing"
version = "0.1.0"
description = "Testing utilities for Iron Cage agents with pytest fixtures and mock runtime"
authors = [
  {name = "Iron Cage Team"}
]
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "iron-cage>=0.1.0",  # Depends on Agent Runtime package
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
